# bongo_solver

./: .gitignore  README.md  common_words.txt  pyproject.toml  ruff.toml  valid_words.txt
.github/workflows/: CI.yml
bongo_solver/: __init__.py  board.py  dictionary.py  letter.py  letter_scores.py  letter_tile.py  tile_pool.py  word_row.py
bongo_solver/letter_slot/: __init__.py  base_letter_slot.py  bonus_letter_slot.py  letter_slot.py  parse_slot_from_symbol.py
bongo_solver/type_helpers/: __init__.py  letter_like.py  word_like.py  word_list.py
bongo_solver/word/: __init__.py  bonus_word.py  word.py  word_row.py
notebooks/: messing.ipynb  nbutil.py
scripts/: build.sh  coverage.sh
tests/: test_board.py  test_dictionary.py  test_letter.py  test_letter_scores.py  test_letter_tile.py  test_tile_pool.py  test_word_like.py  test_word_row.py
tests/test_letter_slot/: __init__.py  test_base_letter_slot.py  test_bonus_letter.py  test_letter_slot.py  test_parse_slot_from_symbol.py
tests/test_word/: test_bonus_word.py  test_word.py  test_word_row.py
