[tool.poetry]
name = "bongo-solver"
version = "0.1.0"
description = ""
authors = ["Zack Drescher <hello@zackdrescher.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beartype = "^0.19.0"
typing-extensions = "^4.12.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
